--- a/src/styles/SkillsList.module.css
+++ b/src/styles/SkillsList.module.css
@@ -1,6 +1,7 @@
 .skillsContainer {
     display: flex;
     flex-direction: column;
+    height: 100%;
     flex-shrink: 0;
     width: 100%;
     margin-bottom: 1.6rem;
@@ -13,11 +14,12 @@
     width: 100%;
 
     & input[type='text'] {
-        /* width: 100%; */
         flex-grow: 1;
         border-radius: 0.5rem;
         padding: 0.5rem;
         border: 0;
+        background-color: var(--color-text-alt);
+        color: white;
     }
 
     & button {
